--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
-<div class="w-50 vh-50 bg-green flex items-center justify-center">
-  <h1 class="white">Living Staff Living Wage</h1>
+{% include living-staff-overlay.html %}
+<div class="flex flex-wrap">
+  {% for ph in site.data.picturehouse-sites %}
+    <div class="relative w-100 w-50-m vh-50 hide-child flex items-center justify-center bg-black tc">
+      <h2 class="white child relative z-3 tracked fw4">{{ ph.name | upcase }}</h2>
+      <div class="absolute w-100 h-100 bg-center cover dim" style="background-image: url({{ site.url }}/img/{{ ph.img }})"></div>
+    </div>
+  {% endfor %}
 </div>
