--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+{% assign
+  sitesModulus = site.data.picturehouse-sites
+    | size
+    | modulo: 2
+%}
+
 {% include hamburger.html %}
 {% include menu.html %}
 {% include living-staff-overlay.html %}
@@ -14,4 +20,11 @@ layout: default
       </div>
     </a>
   {% endfor %}
+  {% if sitesModulus == 1 %}
+    <div picturehouse-site-odd class="relative dib w-100 w-50-m vh-50">
+      <div class="h-100 flex items-center justify-center bg-black tc">
+        <h2 class="white relative z-3 tracked fw4">{{ "Join Our Campaign" | upcase }}</h2>
+      </div>
+    </div>
+  {% endif %}
 </div>
