--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
 
 {% include hamburger.html %}
 {% include menu.html %}
+{% include info.html %}
 {% include living-staff-overlay.html %}
 <div container class="flex flex-wrap">
   {% for ph in site.data.picturehouse-sites %}
