--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
     </a>
   {% endfor %}
   {% if sitesModulus == 1 %}
-    <a picturehouse-site-odd href="https://www.bectu.org.uk/home" target="_blank" class="relative dib w-100 w-50-m vh-50">
+    <a picturehouse-site-odd href="https://www.bectu.org.uk/get-involved/cinema" target="_blank" class="relative dib w-100 w-50-m vh-50 pointer">
       <div site-img-container class="h-100 flex items-center justify-center bg-black tc">
         <h2 class="white child relative z-3 tracked fw4">{{ "Join Our Campaign" | upcase }}</h2>
         <div site-img class="absolute left-0 w-100 h-100 bg-center cover o-0 t-5 all ease" style="background-image: url({{ site.url }}/img/bectu.jpg)"></div>
